<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Ledger</string>
    <string name="app_name_ledger">Ledger</string>
    <string name="app_name_create_ledger">Create Ledger</string>
    <string name="app_name_entry">Entry</string>
    <string name="app_name_add_entry">Add Entry</string>
    <string name="app_name_image">Image</string>
    
    <string name="action_dropbox_connect">Connect to Dropbox</string>
    <string name="action_dropbox_disconnect">Disconnect from Dropbox</string>
    <string name="action_new_ledger">Create ledger</string>
    
    <string name="txt_no_ledgers">No ledgers have been added</string>
    <string name="txt_no_entries">No entries have been added</string>
    <string name="txt_no_images">No images have been added</string>
    <string name="txt_no_cloud">You have not connected\nyour cloud storage provider</string>
    <string name="txt_my_ledgers">My Ledgers:</string>
    <string name="txt_wait_ledgers">Retrieving all ledgers&#8230;</string>
    <string name="txt_wait_ledger">Retrieving ledger&#8230;</string>
    <string name="txt_wait_create_ledger">Uploading new ledger&#8230;</string>
    <string name="txt_wait_create_entry">Uploading new entry&#8230;</string>
    <string name="txt_wait_delete_ledger">Ledger deletion in progress&#8230;</string>
    <string name="txt_wait_delete_entry">Entry deletion in progress&#8230;</string>
    <string name="txt_ledger_title">Title</string>
    <string name="txt_ledger_title2">Title:</string>
    <string name="txt_ledger_description">Description</string>
    <string name="txt_ledger_description2">Description:</string>
    <string name="txt_view">View</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_ledger_actions">Ledger Actions</string>
    <string name="txt_entry_actions">Entry Actions</string>
    <string name="txt_image_actions">Image Actions</string>
    <string name="txt_confirm_delete">Confirm Deletion!</string>
    <string name="txt_created_by">Created by:</string>
    <string name="txt_created_on">Created on:</string>
    <string name="txt_modified_on">Last modified:</string>
    <string name="txt_number">Number:</string>
    <string name="txt_amount">Amount:</string>
    <string name="txt_doc_date">Document date:</string>
    <string name="txt_confirm_entry_title">Confirm submission</string>
    <string name="txt_confirm_entry_msg">You have not added any images!\nProceed with entry submission?</string>
    
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="btn_new_entry">Add entry</string>
    <string name="btn_new_image">Add image</string>
    
    <color name="text_brown_1">#4D2514</color>
    
</resources>
