<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="15dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp" >

    <EditText
        android:id="@+id/editDescription"
        android:inputType="textMultiLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/txtDescription"
        android:lines="3"
        android:minLines="2"
        android:maxLines="4"
        android:textSize="14sp" />
    
    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_alignBaseline="@+id/editDescription"
        android:text="@string/txt_ledger_description"
        android:textColor="#bbb"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editAmount"
        android:inputType="numberDecimal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/txtDescription"
        android:layout_below="@+id/editDescription"
        android:layout_alignRight="@+id/editDescription"
        android:lines="3"
        android:minLines="2"
        android:maxLines="4"
        android:textSize="14sp" />
    
    <TextView
        android:id="@+id/txtAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_alignBaseline="@+id/editAmount"
        android:text="@string/txt_amount"
        android:textColor="#bbb"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editDocDate"
        android:inputType="date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/txtDocDate"
        android:layout_below="@+id/editAmount"
        android:layout_alignRight="@+id/editAmount"
        android:lines="3"
        android:minLines="2"
        android:maxLines="4"
        android:textSize="14sp" />
    
    <TextView
        android:id="@+id/txtDocDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_alignBaseline="@+id/editDocDate"
        android:text="@string/txt_doc_date"
        android:textColor="#bbb"
        android:textSize="16sp" />
    
    <GridView
        android:id="@+id/gridThumbs"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/editDocDate"
        android:layout_above="@+id/btnNewImage"
        android:numColumns="3"
        android:verticalSpacing="7dp"
        android:horizontalSpacing="7dp"
        android:stretchMode="columnWidth" />
    
    <Button
        android:id="@+id/btnNewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linBtnContainer"
        android:gravity="center"
        android:text="@string/btn_new_image"
        android:onClick="onNewImageClicked" />
        
    <LinearLayout
        android:id="@+id/linBtnContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >
    
    	<Button
        	android:id="@+id/btnCancel"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:layout_marginRight="5dp"
        	android:text="@string/btn_cancel"
        	android:onClick="onCancelClicked" />
    
    	<Button
        	android:id="@+id/btnSubmit"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:layout_marginLeft="5dp"
        	android:text="@string/btn_submit"
        	android:onClick="onSubmitClicked" />
    	
    </LinearLayout>

</RelativeLayout>
