<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:clickable="false"
    android:background="@drawable/background" >
    
    <TextView
        android:id="@+id/txtLabelNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/txt_number"
        android:textColor="@color/text_brown_1"
        android:textSize="16sp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/txtNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtLabelNumber"
        android:layout_alignLeft="@+id/txtDocDate"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="14sp" />
    
    <TextView
        android:id="@+id/txtLabelDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtLabelNumber"
        android:textColor="@color/text_brown_1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txt_ledger_description2" />
    
    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtLabelDescription"
        android:layout_alignLeft="@+id/txtDocDate"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="14sp"
        android:clickable="true"
        android:onClick="onDescriptionClicked" />
    
    <TextView
        android:id="@+id/txtLabelAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtLabelDescription"
        android:textColor="@color/text_brown_1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txt_amount" />
    
    <TextView
        android:id="@+id/txtAmount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtLabelAmount"
        android:layout_alignLeft="@+id/txtDocDate"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="14sp"
        android:clickable="true" />
    
    <TextView
        android:id="@+id/txtLabelDocDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtLabelAmount"
        android:textColor="@color/text_brown_1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txt_doc_date" />
    
    <TextView
        android:id="@+id/txtDocDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txtLabelDocDate"
        android:layout_alignBaseline="@+id/txtLabelDocDate"
        android:layout_marginLeft="10dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="14sp"
        android:clickable="true" />
    
    <TextView
        android:id="@+id/txtLabelCreatedOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtLabelDocDate"
        android:textColor="@color/text_brown_1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txt_created_on" />
    
    <TextView
        android:id="@+id/txtCreatedOn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtLabelCreatedOn"
        android:layout_alignLeft="@+id/txtDocDate"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="14sp" />
    
    <TextView
        android:id="@+id/txtLabelModified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtLabelCreatedOn"
        android:textColor="@color/text_brown_1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txt_modified_on" />
    
    <TextView
        android:id="@+id/txtModified"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtLabelModified"
        android:layout_alignLeft="@+id/txtDocDate"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="14sp" />
    	    
    <GridView
        android:id="@+id/gridThumbs"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/txtLabelModified"
        android:layout_above="@+id/btnNewImage"
        android:numColumns="2"
        android:verticalSpacing="7dp"
        android:horizontalSpacing="7dp"
        android:stretchMode="columnWidth" />

	<ProgressBar
		android:id="@+id/progressThumbs"
		style="?android:attr/progressBarStyleLarge"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
    	    
    <TextView
        android:id="@+id/txtNoThumbs"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/text_brown_1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/txt_no_images" />
	
    <Button
        android:id="@+id/btnNewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_new_image"
        android:onClick="onNewImageClicked"
        android:visibility="gone" />

</RelativeLayout>
