<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:clickable="false"
    android:background="@drawable/background" >
    
    <TextView
        android:id="@+id/txtLabelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/txt_ledger_title2"
        android:textColor="@color/text_brown_1"
        android:textSize="16sp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtLabelTitle"
        android:layout_alignLeft="@+id/txtModified"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="14sp" />
    
    <TextView
        android:id="@+id/txtLabelDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtLabelTitle"
        android:textColor="@color/text_brown_1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txt_ledger_description2" />
    
    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtLabelDescription"
        android:layout_alignLeft="@+id/txtModified"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="14sp"
        android:clickable="true"
        android:onClick="onDescriptionClicked" />
    
    <TextView
        android:id="@+id/txtLabelCreatedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtLabelDescription"
        android:textColor="@color/text_brown_1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txt_created_by" />
    
    <TextView
        android:id="@+id/txtCreatedBy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtLabelCreatedBy"
        android:layout_alignLeft="@+id/txtModified"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="14sp"
        android:clickable="true"
        android:onClick="onCreatorClicked" />
    
    <TextView
        android:id="@+id/txtLabelCreatedOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtLabelCreatedBy"
        android:textColor="@color/text_brown_1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txt_created_on" />
    
    <TextView
        android:id="@+id/txtCreatedOn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtLabelCreatedOn"
        android:layout_alignLeft="@+id/txtModified"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="14sp" />
    
    <TextView
        android:id="@+id/txtLabelModified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtLabelCreatedOn"
        android:textColor="@color/text_brown_1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/txt_modified_on" />
    
    <TextView
        android:id="@+id/txtModified"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txtLabelModified"
        android:layout_alignBaseline="@+id/txtLabelModified"
        android:layout_marginLeft="10dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="14sp" />
    	    
    <ListView
        android:id="@+id/listEntries"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/txtLabelModified"
        android:background="@drawable/listview_bg"
        android:divider="#888"
        android:dividerHeight="2dp" />

	<ProgressBar
		android:id="@+id/progressEntries"
		style="?android:attr/progressBarStyleLarge"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
    	    
    <TextView
        android:id="@+id/txtNoEntries"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/text_brown_1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/txt_no_entries" />
	
    <Button
        android:id="@+id/btnNewEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_new_entry"
        android:onClick="onNewEntryClicked" />

</RelativeLayout>
